# evolutyz-rag-python

./: .env.example  .gitignore  README.md  SUMMARY_ENHANCEMENT_README.md  pyproject.toml  requirements.txt  test_function_calling_integration.py  test_summary_enhancement.py  test_text_cleaning.py
app/: main.py
app/api/: files.py  ingestion.py  query.py
app/models/: ingestion.py  query.py
app/services/: files_service.py  ingestion_service.py  llm_service.py  pdf_query_service.py  pdf_service.py  query_service.py
app/utils/: colbert_embedder.py  create_filename_index.py  logging_config.py  pdf_utils.py  qdrant_client.py  qdrant_multivector_setup.py  segmentation.py
docs/: ARCHITECTURE.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  DIAGRAMS.md  DOCUMENTATION.md  FEATURES.md  INDEX.md  PLAN.md  PLAN_FULL.md  PRESENTATION_SCRIPT.md
tests/: README.md  __init__.py  test_concise_responses.py  test_delete_functionality.py  test_empty_file_selection.py  test_file_selection_logic.py  test_integration_check.py  test_markdown_processing.py  test_qdrant_connection.py
